# app/Http/Controllers/Api/PedidoController.php
@@ -32,7 +32,7 @@ class PedidoController extends ApiController
      *                      )
      *                 ),
      *                 example={
-     *                     "mail":"clienteiaw2023@gmail.com",
+     *                     "mail_cliente":"clienteiaw2023@gmail.com",
      *                     "monto":"9999999999.99"
      *                }
      *             )
@@ -59,7 +59,7 @@ class PedidoController extends ApiController
      *      )
      * )
      * 
-     * @param StorePedidoRequest $request Informacion del detalle pedido a crear.
+     * @param StorePedidoRequest $request Informacion del pedido a crear.
      * @return PedidoResource
      */
     public function store(StorePedidoRequest $request)
@@ -68,7 +68,82 @@ class PedidoController extends ApiController
     }
 
     /**
-     * Display the specified resource.
+     * Retorna la información de un pedido especifico con todas sus prendas
+     *
+     * @OA\Get(
+     *     path="/rest/pedidos/{pedido}",
+     *     tags={"Pedidos"},
+     *     @OA\Response(
+     *         response="200",
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="id",
+     *                     type="number",
+     *                     example="1000"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="created_at",
+     *                     type="string",
+     *                     example="2023-05-07 20:13:03"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="updated_at",
+     *                     type="string",
+     *                     example="2023-05-07 20:13:03"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="mail_cliente",
+     *                     type="string",
+     *                     example="clienteiaw2023@gmail.com"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="monto",
+     *                     type="string",
+     *                     example="35999.99"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="prendas",
+     *                     type="array",
+     *                     @OA\Items(
+     *                         @OA\Property(
+     *                             property="id",
+     *                             type="number",
+     *                             example="1"
+     *                         ),
+     *                         @OA\Property(
+     *                             property="nombre",
+     *                             type="string",
+     *                             example="Harden"
+     *                         ),
+     *                         @OA\Property(
+     *                             property="cantidad",
+     *                             type="number",
+     *                             example="4"
+     *                         )
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *       response=404,
+     *       description="Not found",
+     *       @OA\JsonContent(
+     *           @OA\Property(
+     *               property="message",
+     *               type="string",
+     *               example="Pedido not found"
+     *           )
+     *       )
+     *    )
+     * )
+     * 
+     * @param Pedido $request Pedido a mostrar
+     * @return PedidoWithPrendasResource
      */
     public function show(Pedido $pedido)
     {
@@ -76,7 +151,38 @@ class PedidoController extends ApiController
     }
 
     /**
-     * Display all the resources of a client.
+     * Obtiene una lista con todos los pedidos de un cliente
+     *
+     * @OA\Get(
+     *     path="/rest/pedidos/clientes/{mail_cliente}",
+     *     tags={"Pedidos"},
+     *     @OA\Parameter(
+     *         name="cliente",
+     *         in="path",
+     *         description="Mail del cliente a buscar",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 @OA\Property(property="id", type="number", example=1),
+     *                 @OA\Property(property="created_at", type="string", example="2023-05-07 00:00:00"),
+     *                 @OA\Property(property="updated_at", type="string", example="2023-05-07 00:00:00"),
+     *                 @OA\Property(property="mail_cliente", type="string", example="clienteiaw2023@gmail.com"),
+     *                 @OA\Property(property="monto", type="number", example="9999999999.99")
+     *             )
+     *         )
+     *     )
+     * )
+     *
+     * @param string $mail_cliente Mail del cliente a buscar
+     * @return PedidoResource:collection()
      */
     public function showAll(string $mail_cliente)
     {
