# storage/api-docs/api-docs.json
@@ -481,7 +481,7 @@
                                 },
                                 "type": "object",
                                 "example": {
-                                    "mail": "clienteiaw2023@gmail.com",
+                                    "mail_cliente": "clienteiaw2023@gmail.com",
                                     "monto": "9999999999.99"
                                 }
                             }
@@ -537,6 +537,147 @@
                                         }
                                     },
                                     "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/rest/pedidos/{pedido}": {
+            "get": {
+                "tags": [
+                    "Pedidos"
+                ],
+                "summary": "Retorna la información de un pedido especifico con todas sus prendas",
+                "operationId": "b272409a761690bf40b077b10ca8d8fe",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "number",
+                                                    "example": "1000"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "example": "2023-05-07 20:13:03"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "example": "2023-05-07 20:13:03"
+                                                },
+                                                "mail_cliente": {
+                                                    "type": "string",
+                                                    "example": "clienteiaw2023@gmail.com"
+                                                },
+                                                "monto": {
+                                                    "type": "string",
+                                                    "example": "35999.99"
+                                                },
+                                                "prendas": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "number",
+                                                                "example": "1"
+                                                            },
+                                                            "nombre": {
+                                                                "type": "string",
+                                                                "example": "Harden"
+                                                            },
+                                                            "cantidad": {
+                                                                "type": "number",
+                                                                "example": "4"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Pedido not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/rest/pedidos/clientes/{mail_cliente}": {
+            "get": {
+                "tags": [
+                    "Pedidos"
+                ],
+                "summary": "Obtiene una lista con todos los pedidos de un cliente",
+                "operationId": "f88b2c61575a4c186cb0622a49b51964",
+                "parameters": [
+                    {
+                        "name": "cliente",
+                        "in": "path",
+                        "description": "Mail del cliente a buscar",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "number",
+                                                "example": 1
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "example": "2023-05-07 00:00:00"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "example": "2023-05-07 00:00:00"
+                                            },
+                                            "mail_cliente": {
+                                                "type": "string",
+                                                "example": "clienteiaw2023@gmail.com"
+                                            },
+                                            "monto": {
+                                                "type": "number",
+                                                "example": "9999999999.99"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
                                 }
                             }
                         }
